WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193527
ScrollingCoordinator: separate updating node geometry from node layers
https://bugs.webkit.org/show_bug.cgi?id=193527
Summary
ScrollingCoordinator: separate updating node geometry from node layers
Simon Fraser (smfr)
Reported
2019-01-16 20:59:18 PST
ScrollingCoordinator: separate updating node geometry from node layers
Attachments
Patch
(22.26 KB, patch)
2019-01-16 21:03 PST
,
Simon Fraser (smfr)
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-01-16 21:03:03 PST
Created
attachment 359347
[details]
Patch
EWS Watchlist
Comment 2
2019-01-16 21:05:19 PST
Attachment 359347
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:16: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Simon Fraser (smfr)
Comment 3
2019-01-17 08:08:28 PST
https://trac.webkit.org/changeset/240110/webkit
Radar WebKit Bug Importer
Comment 4
2019-01-17 08:09:28 PST
<
rdar://problem/47351358
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug